--- a/index.html
+++ b/index.html
@@ -1,21 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Industrial Actuators & Gearboxes | Advanced Motion Control Solutions</title>
-    <meta name="description" content="Leading manufacturer of Pneumatic Scotch Yoke Rotary Actuators, Gearboxes, Electro-Hydraulic Actuators, and Electrical Actuators for industrial applications.">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Industrial Actuators & Gearboxes | Advanced Motion Control Solutions</title>
+        <meta name="description" content="Leading manufacturer of actuators and gearboxes — Pneumatic, Electro-Hydraulic and Electrical actuators for critical industrial applications worldwide.">
+        <link rel="canonical" href="https://www.susingroup.com/index.html" />
+        <link rel="icon" href="logo.jpg">
+
+        <!-- Performance hints -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+        <link rel="preload" href="css/style.css" as="style">
+
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+        <!-- Open Graph / Twitter -->
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Industrial Actuators & Gearboxes | Advanced Motion Control Solutions">
+        <meta property="og:description" content="Leading manufacturer of actuators and gearboxes — Pneumatic, Electro-Hydraulic and Electrical actuators for critical industrial applications worldwide.">
+        <meta property="og:url" content="https://www.susingroup.com/index.html">
+        <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta name="twitter:card" content="summary_large_image">
+
+        <!-- Structured data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "name": "Susin Group",
+            "url": "https://www.susingroup.com"
+        }
+        </script>
+    </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
                 <a href="index.html" class="logo">
-                    <img src="logo.jpg" alt="Company Logo">
-                    <span class="logo-text">Industrial Solutions</span>
+                    <img src="logo.jpg" alt="Company Logo" loading="lazy" decoding="async">
+                    <span class="logo-text">SUSIN</span>
                 </a>
                 <ul class="nav-menu" id="navMenu">
                     <li class="lang-selector">
@@ -99,8 +125,10 @@
             </div>
         </div>
     </nav>
+    
+        <main id="main-content">
 
-    <!-- Hero Section -->
+        <!-- Hero Section -->
     <section class="hero">
         <div class="hero-overlay"></div>
         <div class="container">
@@ -129,7 +157,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-icon">
-                        <img src="https://www.susingroup.com/assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Actuator" class="product-card-img">
+                        <img src="https://www.susingroup.com/assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Actuator" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
                     </div>
                     <h3>Pneumatic Scotch Yoke Rotary Actuators</h3>
                     <p><strong>Series:</strong> PDS Actuator, HD Actuator</p>
@@ -141,7 +169,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
-                        <img src="https://www.susingroup.com/assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Gearbox" class="product-card-img">
+                        <img src="https://www.susingroup.com/assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Gearbox" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw">
                     </div>
                     <h3>Gearboxes</h3>
                     <p><strong>Series:</strong> ITG Series Mechanical Worm Gear Actuators</p>
@@ -153,7 +181,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
-                        <img src="https://www.susingroup.com/assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-card-img">
+                        <img src="https://www.susingroup.com/assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw">
                     </div>
                     <h3>Electro-Hydraulic Actuators</h3>
                     <p>Advanced electro-hydraulic actuators combining electrical control with hydraulic power for high-force applications and precise positioning.</p>
@@ -164,7 +192,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
-                        <img src="https://www.susingroup.com/assets/img/products/electrical/itq-series.jpg" alt="ITQ Electrical Actuator" class="product-card-img">
+                        <img src="https://www.susingroup.com/assets/img/products/electrical/itq-series.jpg" alt="ITQ Electrical Actuator" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw">
                     </div>
                     <h3>Electrical Actuators</h3>
                     <p><strong>Series:</strong> ITQ Series (Rotary)</p>
@@ -260,6 +288,8 @@
         </div>
     </section>
 
+    </main>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -312,6 +342,6 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
