--- a/products.html
+++ b/products.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products | Industrial Actuators & Gearboxes</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Products | Industrial Actuators & Gearboxes</title>
+        <meta name="description" content="Product portfolio: Pneumatic Scotch Yoke rotary actuators, gearboxes, electro-hydraulic and electrical actuators for industrial automation.">
+        <link rel="canonical" href="https://www.susingroup.com/products.html" />
+        <link rel="icon" href="logo.jpg">
+
+        <!-- Performance hints -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+        <link rel="preload" href="css/style.css" as="style">
+
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+        <!-- Open Graph / Twitter -->
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Products | Industrial Actuators & Gearboxes">
+        <meta property="og:description" content="Product portfolio: Pneumatic, Gearboxes, Electro-Hydraulic and Electrical Actuators for industrial automation.">
+        <meta property="og:url" content="https://www.susingroup.com/products.html">
+        <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta name="twitter:card" content="summary_large_image">
+
+        <!-- Structured data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "CollectionPage",
+            "name": "Products - Susin Group",
+            "url": "https://www.susingroup.com/products.html"
+        }
+        </script>
+    </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
                 <a href="index.html" class="logo">
-                    <img src="logo.jpg" alt="Company Logo">
+                    <img src="logo.jpg" alt="Company Logo" loading="lazy">
                     <span class="logo-text">Industrial Solutions</span>
                 </a>
                 <ul class="nav-menu" id="navMenu">
@@ -98,12 +125,21 @@
             </div>
         </div>
     </nav>
+    
+        <main id="main-content">
 
-    <!-- Page Header -->
+        <!-- Page Header -->
     <section class="page-header">
         <div class="container">
             <h1>Our Products</h1>
             <p>Comprehensive range of industrial actuators and gearboxes for critical applications</p>
+
+            <nav aria-label="Breadcrumb">
+                <ol class="breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li aria-current="page">Products</li>
+                </ol>
+            </nav>
         </div>
     </section>
 
@@ -112,8 +148,8 @@
         <div class="container">
             <div class="product-detail">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Scotch Yoke Rotary Actuator" class="product-img">
-                    <img src="https://www.susingroup.com/assets/img/products/pneumatic/hd-actuator.jpg" alt="HD Pneumatic Actuator" class="product-img">
+                    <img src="https://www.susingroup.com/assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Scotch Yoke Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    <img src="https://www.susingroup.com/assets/img/products/pneumatic/hd-actuator.jpg" alt="HD Pneumatic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
                 </div>
                 <div class="product-content">
                     <h2>Pneumatic Scotch Yoke Rotary Actuators</h2>
@@ -176,7 +212,7 @@
         <div class="container">
             <div class="product-detail reverse">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Mechanical Worm Gear Actuator" class="product-img">
+                    <img src="https://www.susingroup.com/assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Mechanical Worm Gear Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
                 </div>
                 <div class="product-content">
                     <h2>Gearboxes</h2>
@@ -239,7 +275,7 @@
         <div class="container">
             <div class="product-detail">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-img">
+                    <img src="https://www.susingroup.com/assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
                 </div>
                 <div class="product-content">
                     <h2>Electro-Hydraulic Actuators</h2>
@@ -301,7 +337,7 @@
         <div class="container">
             <div class="product-detail reverse">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/electrical/itq-series.jpg" alt="ITQ Series Electrical Rotary Actuator" class="product-img">
+                    <img src="https://www.susingroup.com/assets/img/products/electrical/itq-series.jpg" alt="ITQ Series Electrical Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
                 </div>
                 <div class="product-content">
                     <h2>Electrical Actuators</h2>
@@ -359,6 +395,8 @@
         </div>
     </section>
 
+    </main>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -411,7 +449,7 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
 
