--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </li>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li class="dropdown">
-                        <a href="products.html">Products <i class="fas fa-chevron-down"></i></a>
+                        <a href="products-actuators-gearboxes.html">Products <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="products.html#pneumatic">Pneumatic Actuators</a></li>
                             <li><a href="products.html#gearboxes">Gearboxes</a></li>
@@ -67,7 +67,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="industries.html">Industries <i class="fas fa-chevron-down"></i></a>
+                        <a href="industries-served.html">Industries <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="industries.html#oil-gas">Oil & Gas</a></li>
                             <li><a href="industries.html#water-treatment">Water Treatment</a></li>
@@ -78,7 +78,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="services.html">Services <i class="fas fa-chevron-down"></i></a>
+                        <a href="services-installation-maintenance.html">Services <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="services.html#installation">Installation & Commissioning</a></li>
                             <li><a href="services.html#maintenance">Maintenance & Support</a></li>
@@ -89,7 +89,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="about.html">About Us <i class="fas fa-chevron-down"></i></a>
+                        <a href="about-industrial-actuators.html">About Us <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="about.html#story">Our Story</a></li>
                             <li><a href="about.html#mission">Mission & Values</a></li>
@@ -98,7 +98,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="resources.html">Resources <i class="fas fa-chevron-down"></i></a>
+                        <a href="resources-technical-docs.html">Resources <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="resources.html#datasheets">Datasheets</a></li>
                             <li><a href="resources.html#manuals">Manuals</a></li>
@@ -108,7 +108,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="contact.html">Contact <i class="fas fa-chevron-down"></i></a>
+                        <a href="contact-support-sales.html">Contact <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="contact.html#contact-form">Contact Form</a></li>
                             <li><a href="contact.html#sales">Sales Inquiry</a></li>
