--- a/industries-served.html
+++ b/industries-served.html
@@ -142,7 +142,9 @@
     <section class="industries-detail">
         <div class="container">
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-industry"></i></div>
+                <div class="industry-icon">
+                    <img src="http://www.susingroup.com/uploads/recent_project/20240731-095344-17224196248255.jfif" alt="Oil & Gas project" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                </div>
                 <h2>Oil & Gas</h2>
                 <p>Critical valve automation solutions for upstream exploration, midstream transportation, and downstream refining operations. Our actuators are designed to withstand extreme temperatures, high pressures, and corrosive environments typical in oil and gas applications.</p>
                 <h3>Key Applications:</h3>
@@ -156,7 +158,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-tint"></i></div>
+                <div class="industry-icon">
+                    <img src="http://www.susingroup.com/uploads/category_thumbnail_image/20250514-114327-17472230071145.JPG" alt="Water treatment plant" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                </div>
                 <h2>Water Treatment</h2>
                 <p>Reliable actuators for water and wastewater treatment facilities, ensuring precise control of valves and gates in critical water management processes. Our solutions meet stringent water quality and environmental standards.</p>
                 <h3>Key Applications:</h3>
@@ -170,7 +174,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-plug"></i></div>
+                <div class="industry-icon">
+                    <img src="http://www.susingroup.com/assets/img/global-presence/germany.jpg" alt="Power plant" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                </div>
                 <h2>Power Generation</h2>
                 <p>High-performance solutions for thermal, nuclear, and renewable energy facilities. Our actuators provide reliable operation in power plants where downtime is not an option.</p>
                 <h3>Key Applications:</h3>
@@ -184,7 +190,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-flask"></i></div>
+                <div class="industry-icon">
+                    <img src="http://www.susingroup.com/uploads/category_thumbnail_image/20250514-095924-17472167644310.png" alt="Chemical processing" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                </div>
                 <h2>Chemical Processing</h2>
                 <p>Corrosion-resistant actuators designed for harsh chemical environments. Our products handle aggressive chemicals, high temperatures, and demanding process conditions while maintaining reliability and precision.</p>
                 <h3>Key Applications:</h3>
@@ -198,7 +206,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-ship"></i></div>
+                <div class="industry-icon">
+                    <img src="http://www.susingroup.com/uploads/recent_project/20240731-094855-17224193357774.jpg" alt="Marine and offshore project" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                </div>
                 <h2>Marine & Offshore</h2>
                 <p>Rugged solutions engineered for marine and offshore applications, designed to withstand saltwater exposure, extreme weather conditions, and the demanding requirements of maritime operations.</p>
                 <h3>Key Applications:</h3>
@@ -212,7 +222,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-building"></i></div>
+                <div class="industry-icon">
+                    <img src="http://www.susingroup.com/uploads/category_thumbnail_image/20250514-115923-17472239635687.jpg" alt="Pharmaceutical manufacturing" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                </div>
                 <h2>Pharmaceutical</h2>
                 <p>Precision actuators meeting strict hygiene and quality standards required in pharmaceutical manufacturing. Our solutions ensure clean, precise control in sterile environments.</p>
                 <h3>Key Applications:</h3>
@@ -226,7 +238,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-fire"></i></div>
+                <div class="industry-icon">
+                    <img src="http://www.susingroup.com/uploads/recent_project/20240731-092632-17224179928266.jpg" alt="Mining operations" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                </div>
                 <h2>Mining & Minerals</h2>
                 <p>Heavy-duty actuators built to handle the extreme conditions of mining operations, including dust, vibration, and heavy loads.</p>
                 <h3>Key Applications:</h3>
@@ -240,7 +254,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-utensils"></i></div>
+                <div class="industry-icon">
+                    <img src="http://www.susingroup.com/uploads/category_thumbnail_image/20250614-233653-17499244132777.png" alt="Food and beverage" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                </div>
                 <h2>Food & Beverage</h2>
                 <p>Hygienic actuators designed for food and beverage processing, meeting FDA and food safety standards with easy-clean designs.</p>
                 <h3>Key Applications:</h3>
