styles revised all

--- a/contact.html
+++ b/contact.html
@@ -186,8 +186,8 @@
                         </div>
                     </div>
                     
-                    <div style="margin-top: 3rem;" id="locations">
-                        <h3 style="color: var(--primary-color); margin-bottom: 1.5rem;">Other Office Locations</h3>
+                    <div id="locations" class="locations-section">
+                        <h3 class="office-heading">Other Office Locations</h3>
                         <div class="office-locations">
                             <div class="office-item">
                                 <h4>Mumbai Office</h4>
@@ -315,7 +315,7 @@
                         <li><i class="fas fa-envelope"></i> info@susin.in</li>
                         <li><i class="fas fa-map-marker-alt"></i> Coimbatore - 641 022, INDIA</li>
                     </ul>
-                    <div class="social-media" style="margin-top: 1.5rem;">
+                    <div class="social-media">
                         <a href="https://www.linkedin.com/company/susin-group" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://www.facebook.com/susingroup" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://twitter.com/susingroup" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
